# meetSync

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.pg-backup  FEATURES.md  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  ТЗ.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_update_meetings_schema.py  (+4 more)
auth-service/: Dockerfile  requirements.txt
calendar-service/: Dockerfile
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
gateway/: Dockerfile  requirements.txt
group-service/: Dockerfile
ideas-service/: Dockerfile  requirements.txt
meeting-service/: Dockerfile
migration/: Dockerfile
notification-service/: Dockerfile  requirements.txt
recommendation-service/: Dockerfile  requirements.txt
scheduler-service/: Dockerfile  requirements.txt
scripts/: admin.py  backup-db.sh  init-ssl.sh  restore-db.sh  run-migrations.py  ssl-letsencrypt.sh  wait-for-it.sh  wait-for-pg.py
shared/: __init__.py  app.py  app_health.py  auth.py  config.py  database.py  exceptions.py  logging.py  metrics.py  pyproject.toml  rate_limit.py
shared/models/: __init__.py  calendar.py  group.py  idea.py  meeting.py  notification.py  user.py  vote.py
shared/rabbitmq/: __init__.py  client.py  events.py
shared/schemas/: __init__.py  auth.py  calendar.py  group.py  idea.py  meeting.py  notification.py  user.py  vote.py
telegram-service/: Dockerfile  requirements.txt
user-service/: Dockerfile
voting-service/: Dockerfile
(+68 files in other folders)
