[project]
name = "meetsync-shared"
version = "0.1.0"
description = "Shared library for MeetSync microservices"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "aio-pika>=9.5.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*"]
